--- a/app/assets/stylesheets/business_show.scss
+++ b/app/assets/stylesheets/business_show.scss
@@ -143,14 +143,14 @@
     padding-bottom: 30px;
 }
 
-.business-map-and-info-left {
-    // display: flex;
-    border: solid 1px gray;
-    height: 300px;
-    width: 300px;
-    // width: 18.5%;
-    // display: inline;
-}
+// .business-map-and-info-left {
+//     // display: flex;
+//     border: solid 1px gray;
+//     height: 300px;
+//     width: 300px;
+//     // width: 18.5%;
+//     // display: inline;
+// }
 
 .business-map-and-info-left > div {
     padding-top: 5px;
@@ -166,13 +166,11 @@
 //     display: flex;
 // }
     
-.business-map-box {
-    display: flex;
-    // width: 100%;
-    // height: 50%;
-    width: 280px;
-    height: 100px;
-}
+// .business-map-box {
+//     display: flex;
+//     // width: 280px;
+//     // height: 100px;
+// }
 
 // .business-map-box
 
