--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag 'application' %>
 
     <script type="text/javascript">
-      // window.googleAPIKey = "<%= Rails.application.credentials.google[:api_key] %>";
+      window.googleAPIKey = "<%= Rails.application.credentials.google[:api_key] %>";
       window.zeroStar = "<%= image_url('large_0.png') %>";
       window.oneStar = "<%= image_url('1_star.png') %>";
       window.oneHalfStar = "<%= image_url('1_half_star.png') %>";
