Update search dropdown to appear with input and hide without input

--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -100,6 +100,7 @@
     border-radius: 4px;
     border: 1px solid black;
     width: 493px;
+    // z-index: 5;
 }
 .search-items {
     background-color: black;
@@ -146,6 +147,7 @@
     border-radius: 4px;
     border: 1px solid black;
     width: 352px;
+    z-index: 5;
 }
 
 ////////////////////////////////////////////////////////////////////
