Add image icons in business_show

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
       window.footer = "<%= image_url('footer_img_2.jpg') %>";
       window.github = "<%= image_url('GitHub-Mark-Light-120px-plus.png') %>";
       window.linkedin = "<%= image_url('LI-In-Bug.png') %>"
+      window.address = "<%= image_url('location_img.png') %>"
+      window.contact = "<%= image_url('contact_img.png') %>"
+      window.website = "<%= image_url('website_img.png') %>"
     </script>
 
   </head>
