--- a/app/assets/stylesheets/business_show.scss
+++ b/app/assets/stylesheets/business_show.scss
@@ -277,6 +277,28 @@
     // box-shadow: 0 0 11px rgba(33,33,33,.2);
 }
 
+// .business-address {
+//     display: inline;
+// }
+
+.business-address img {
+    width: 20px;
+    height: 20px;
+    padding-right: 10px;
+}
+
+.business-phone img {
+    width: 20px;
+    height: 20px;
+    padding-right: 10px;
+}
+
+.business-website img {
+    width: 20px;
+    height: 20px;
+    padding-right: 10px;
+}
+
 .business-hours > div {
     padding-top: 5px;
     font-size: 15px;
