Initialize user profile and update styling

--- a/app/assets/stylesheets/business_index.scss
+++ b/app/assets/stylesheets/business_index.scss
@@ -194,6 +194,10 @@
 //     float: right;
 // }
 
+.business-item-contact-info div {
+    padding-bottom: 5px;
+}
+
 .business-item-description {
     flex: 1 1 auto;
     // margin-left: 200px;
