--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,11 @@
       window.twoFav = "<%= image_url('fav_2.png') %>";
       window.threeFav = "<%= image_url('fav_3.jpg') %>";
       window.splashBackground = "<%= image_url('splash_fit.png') %>";
+      window.splashBackground_2 = "<%= image_url('background_2.jpg') %>";
+      window.splash3 = "<%= image_url('splash_3.jpg') %>";
+      window.splash4 = "<%= image_url('splash_4.jpg') %>";
+      window.splash5 = "<%= image_url('splash_5.jpg') %>";
+      window.splash6 = "<%= image_url('splash_6.jpg') %>";
       window.signup = "<%= image_url('signup.png') %>";
       window.review = "<%= image_url('review_form.png') %>";
       // window.footer = "<%= image_url('footer_image.png') %>";
@@ -36,6 +41,7 @@
       window.address = "<%= image_url('location_img.png') %>"
       window.contact = "<%= image_url('contact_img.png') %>"
       window.website = "<%= image_url('website_img.png') %>"
+      window.edit = "<%= image_url('edit_review_img.jpg') %>"
     </script>
 
   </head>
