--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -280,6 +280,7 @@
     // filter: grayscale(30%);
     -webkit-filter: blur(1px);
     filter: blur(1px);
+    filter: brightness(65%);
 }
 
 .splash-contents {
