--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -12,6 +12,7 @@
     // padding-left: 8px;
     // margin-left: 8px;
     background-color: rgb(201, 29, 29);
+    // background-color: darkblue;
     // background-color: #db0e0e;
     // justify-content: center;
     justify-content: space-between;
@@ -241,6 +242,12 @@
     padding-bottom: 5px;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.business-index-sub-navbar-right {
+    font-family: Arial, Helvetica, sans-serif;
+    padding-right: 105px;
+    padding-left: 250px;
 }
 
 .sub-navbar a {
