--- a/app/assets/stylesheets/review_index.scss
+++ b/app/assets/stylesheets/review_index.scss
@@ -12,6 +12,7 @@
     border-bottom: solid 1px lightgray;
     padding: 20px 0px;
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .business-review-author {
@@ -32,10 +33,19 @@
 
 .rating-and-date {
     padding-bottom: 10px;
+    display: flex;
 }
 
 
 //////////////////// REVIEW-INDEX-ITEM ////////////////////
+
+.review-user-info {
+    display: inline;
+}
+
+.edit-review-link-hover {
+    padding: 5px 0;
+}
 
 .edit-review-link {
     text-decoration: none;
@@ -44,10 +54,27 @@
     // border-top: solid 1px lightgray;
     // padding-top: 10px;
     // margin-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    // padding-bottom: 3px;
+    // border-top: 1px solid black;
+    // border-bottom: 1px solid black;
+    // padding: 5px;
+}
+
+.edit-review-link span {
+    padding-left: 5px;
+    margin-bottom: 5px;
 }
 
 .edit-review-link:hover {
     text-decoration: underline;
+}
+
+.edit-review-link img {
+    width: 20px;
+    height: 20px;
+    margin-top: 2.5px;
 }
 
 // .business-review-author {
