--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -246,8 +246,9 @@
 
 .business-index-sub-navbar-right {
     font-family: Arial, Helvetica, sans-serif;
-    padding-right: 105px;
-    padding-left: 250px;
+    padding-right: 145px;
+    // padding-left: 250px;
+    padding-left: 390px;
 }
 
 .sub-navbar a {
