--- a/app/assets/stylesheets/business_index.scss
+++ b/app/assets/stylesheets/business_index.scss
@@ -68,9 +68,9 @@
 ////////////////////////////////////// MAP ///////////////////////////
 
 #business-map {
-    position: -webkit-sticky; /* Safari */
-    position: sticky;
-    top: 0;
+    // position: -webkit-sticky; /* Safari */
+    // position: sticky;
+    // top: 0;
     // height: 350px;
     height: 300px;
     width: 300px;
@@ -122,7 +122,7 @@
     // column-gap: 10px;
     flex-flow: row wrap;
     padding-left: 10px;
-    width: 100%;
+    // width: 100%;
 }
 
 .index-item-top-half {
