--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,17 @@
       window.edit = "<%= image_url('edit_review_img.jpg') %>"
     </script>
 
+    <% if logged_in? %>
+      <script type="text/javascript">
+        window.currentUser = {
+          "id": "<%=current_user.id%>",
+          "firstName": "<%=current_user.first_name%>",
+          "lastName": "<%=current_user.last_name%>",
+          "email": "<%=current_user.email%>"
+        };
+      </script>
+    <% end %>
+
   </head>
 
   <body>
