Add link to delete review

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,7 @@
       window.contact = "<%= image_url('contact_img.png') %>"
       window.website = "<%= image_url('website_img.png') %>"
       window.edit = "<%= image_url('edit_review_img.jpg') %>"
+      window.delete = "<%= image_url('delete_review_img.png') %>"
     </script>
 
     <% if logged_in? %>
