--- a/app/assets/stylesheets/review_index.scss
+++ b/app/assets/stylesheets/review_index.scss
@@ -143,3 +143,16 @@
     transition: 1s;
     outline: none;
 }
+
+.reacted {
+    // transition: 0.6s linear; 
+    transition: 0.6s; 
+    background-color: #24242f !important;
+    // border-color:  #24242f !important;
+    // font-weight: bolder !important;
+    font-size: 13px;
+    color: lightgreen !important;
+    padding: 5px;
+    font-weight: bold;
+    border-radius: 4px;
+}
