Add styling to edit review link

--- a/app/assets/stylesheets/review_index.scss
+++ b/app/assets/stylesheets/review_index.scss
@@ -43,8 +43,16 @@
     display: inline;
 }
 
-.edit-review-link-hover {
+// .edit-review-link-hover {
+//     padding: 5px 0;
+// }
+
+#edit-review-link-hover {
     padding: 5px 0;
+}
+
+.hide {
+    display: none;
 }
 
 .edit-review-link {
