--- a/app/assets/stylesheets/business_index.scss
+++ b/app/assets/stylesheets/business_index.scss
@@ -93,6 +93,19 @@
 //     width: 300px;
 // }
 
+.business-filter-price {
+    // display: flex;
+    display: inline flex;
+    font-family: Arial, Helvetica, sans-serif;
+    // padding-left: 100px;
+    padding-left: 140px;
+    padding-right: 100px;
+    padding-top: 15px;
+}
+
+.filter-price-buttons {
+    display: flex;
+}
 
 ////////////////////////////business index item/////////////////////////////////
 
